chore: changed the table and fixed the speech recognition

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,12 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
   },
+  "include": [
+    "src/**/*.ts",
+    "src/index.d.ts"
+  ],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
