--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash-es": "^4.17.21",
     "ngx-gauge": "^6.0.0",
     "rxjs": "~7.5.0",
+    "speak-tts": "^2.0.8",
     "swiper": "^8.4.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
