--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/router": "^14.1.0",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.2",
+    "bootstrap": "5.3.0-alpha2",
     "jquery": "^3.6.1",
     "lodash-es": "^4.17.21",
     "ngx-gauge": "^6.0.0",
